--- a/Programs/Bard/Projects/BardVM/Windows/BardVM-Windows.vcxproj.filters
+++ b/Programs/Bard/Projects/BardVM/Windows/BardVM-Windows.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardVM.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardAllocator.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardArray.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -66,10 +63,10 @@
     <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardOpcodes.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardProgram.c">
+    <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardEventQueue.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardEventQueue.c">
+    <ClCompile Include="..\..\..\Libraries\Bard\VM\C\BardProcessor.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -107,9 +104,6 @@
     <ClInclude Include="..\..\..\Libraries\Bard\VM\C\Bard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Libraries\Bard\VM\C\BardAllocator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Libraries\Bard\VM\C\BardArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -123,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\Libraries\Bard\VM\C\BardList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Libraries\Bard\VM\C\BardProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
