--- a/Source/Compiler/CPP/Makefile
+++ b/Source/Compiler/CPP/Makefile
@@ -1,3 +1,3 @@
 cpp:
-	g++ -Wall main.cpp RogueTypes.cpp RogueMM.cpp
+	g++ -Wall main.cpp RogueTypes.cpp RogueMM.cpp Test.cpp RogueIDTable.cpp
 	./a.out
