Working on C++ code generation.

--- a/Source/Compiler/CPP/Makefile
+++ b/Source/Compiler/CPP/Makefile
@@ -1,3 +1,6 @@
 cpp:
-	g++ -Wall main.cpp RogueTypes.cpp RogueMM.cpp Test.cpp RogueIDTable.cpp
+	g++ -Wall main.cpp RogueTypes.cpp RogueAllocator.cpp Test.cpp RogueIDTable.cpp
 	./a.out
+
+clean:
+	rm -f ./a.out
