Routines (static methods) basically working.

--- a/Source/Compiler/Makefile
+++ b/Source/Compiler/Makefile
@@ -5,7 +5,7 @@ BARDVM = ../../Programs/Bard/Programs/Mac/bard
 BCC    = ../../Programs/Bard/Programs/BCC.bc
 BCC_ARGS = --source-folders=../../Programs/Bard/Libraries/Bard --include=Standard.bard
 
-all: go list
+all: go
 
 go: compile run
 
