Moved .bard source to separate folder.  Going to port to .rogue compiler source.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.swp
 .DS_Store
-Source/Compiler/*.bc
+Source/Compiler/Bard/RogueC.bc
 Programs/Bard/Programs/Mac
 Programs/Bard/Programs/Windows
 Test.cpp
