Console.input() now strips newline.  Added String::split() and List::random().  Finished NameGenerator sample.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 Source/Compiler/Bard/RogueC.bc
 Programs/Bard/Programs/Mac
 Programs/Bard/Programs/Windows
+Test.rogue
 Test.cpp
 Test.h
 a.out
 RogueProgram.*
 Programs/roguec
+Samples/**/*.h
+Samples/**/*.cpp
+namegenerator
