Updated the doc generator run properly from its current location (Source/DocGen).

--- a/Source/DocGen/Makefile
+++ b/Source/DocGen/Makefile
@@ -1,3 +1,6 @@
 all:
+	cd ../Libraries/Standard && python ../../DocGen/makedoc.py *.rogue | pbcopy
+
+rogue_unused:
 	mkdir -p Build
 	roguec DocGen.rogue --output=Build --execute
