Added Local.mk makefile for keeping the Wiki's API page up to date.

--- a/Source/DocGen/Makefile
+++ b/Source/DocGen/Makefile
@@ -1,5 +1,5 @@
 all:
-	cd ../Libraries/Standard && python ../../DocGen/makedoc.py *.rogue | pbcopy
+	cd ../Libraries/Standard && python ../../DocGen/makedoc.py *.rogue > ../../../Wiki/API.mediawiki
 
 rogue_unused:
 	mkdir -p Build
