--- a/Source/DocGen/Makefile
+++ b/Source/DocGen/Makefile
@@ -1,4 +1,5 @@
 all:
+	@mkdir -p ../../Wiki
 	cd ../Libraries/Standard && python ../../DocGen/makedoc.py *.rogue > ../../../Wiki/API.mediawiki
 
 rogue_unused:
